# near-lake-framework-py

./: .gitignore  .pylintrc  README.md  main.py  near_types.py  pyproject.toml  requirements.txt  s3_fetchers.py  setup.cfg  setup.py  useless_near_types.py
.github/workflows/: black.yml  mypy.yml  pull-request.yml  pylint.yml
example/: run.py
src/example_package_frolik/: main.py
src/near-lake-framework/: __init__.py  near_primitives.py  s3_fetchers.py
src/near_lake_framework/: __init__.py  near_primitives.py  s3_fetchers.py  utils.py
