[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "near_lake_framework"
version = "0.0.1"
authors = [
  { name="Ivan Frolov", email="frolvanya@gmail.com" },
]
description = "test"
readme = "README.md"
license = { file="LICENSE-APACHE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/frolvanya/near-lake-framework-py"
"Bug Tracker" = "https://github.com/frolvanya/near-lake-framework-py/issues"